tests/snapshots/codegen_tests__ownership_mut.snap
---
source: tests/codegen_tests.rs
assertion_line: 46
expression: transpile(source)
---
fn modify(items: &mut Vec<i64>) {
    items.push(42);
}
