tests/snapshots/codegen_tests__plain_class.snap
---
source: tests/codegen_tests.rs
expression: transpile(source)
---
#[derive(Debug, Clone)]
struct AppState {
    db: String,
    count: i64,
}

impl AppState {
    fn new(db: String, count: i64) -> Self {
        Self {
            db,
            count,
        }
    }
}
