tests/snapshots/codegen_tests__pydantic_optional_with_default.snap
---
source: tests/codegen_tests.rs
assertion_line: 83
expression: transpile(source)
---
#[derive(Debug, Clone)]
struct Company {
    name: String,
    ceo: Option<String>,
}

impl Company {
    fn new(name: String) -> Self {
        Self {
            name,
            ceo: None,
        }
    }
}
