tests/snapshots/codegen_tests__pydantic_with_constraints.snap
---
source: tests/codegen_tests.rs
expression: transpile(source)
---
#[derive(Debug, Clone)]
struct ValidationError {
    field: String,
    message: String,
}

impl ValidationError {
    fn field(field: &str, message: &str) -> Self {
        Self {
            field: field.to_string(),
            message: message.to_string(),
        }
    }
}

impl std::fmt::Display for ValidationError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}: {}", self.field, self.message)
    }
}

#[derive(Debug, Clone)]
struct User {
    name: String,
    age: i64,
}

impl User {
    fn new(name: String, age: i64) -> Result<Self, ValidationError> {
        if age < 0 {
            return Err(ValidationError::field("age", "must be >= 0"));
        }
        if age > 150 {
            return Err(ValidationError::field("age", "must be <= 150"));
        }
        Ok(Self {
            name,
            age,
        })
    }
}
