tests/snapshots/codegen_tests__result_type.snap
---
source: tests/codegen_tests.rs
assertion_line: 126
expression: transpile(source)
---
fn divide(a: f64, b: f64) -> Result<f64, String> {
    if b == 0.0 {
        return Err("division by zero".to_string());
    }
    return Ok(a / b);
}
