tests/snapshots/codegen_tests__serde_derives.snap
---
source: tests/codegen_tests.rs
expression: transpile(source)
---
use serde::{Serialize, Deserialize};

#[derive(Debug, Clone, Serialize, Deserialize)]
struct Point {
    x: f64,
    y: f64,
}

impl Point {
    fn new(x: f64, y: f64) -> Self {
        Self {
            x,
            y,
        }
    }
}
