tests/snapshots/codegen_tests__static_method_call.snap
---
source: tests/codegen_tests.rs
expression: transpile(source)
---
use rusqlite::Connection;

fn open_db() -> Connection {
    let conn = Connection::open(":memory:");
    return conn;
}
