tests/snapshots/codegen_tests__string_methods.snap
---
source: tests/codegen_tests.rs
assertion_line: 158
expression: transpile(source)
---
fn process(s: String) -> String {
    return s.to_uppercase();
}
